--- a/inlamning/index.html
+++ b/inlamning/index.html
@@ -25,9 +25,9 @@
     <form>
       
         <select name="" id="">
-            <option value="">Choose</option>
-            <option value="">+</option>
-            <option value="">-</option>
+            <option value="" class="choose">Choose</option>
+            <option value="+" class="plus">+</option>
+            <option value="" class="minus">-</option>
         </select>
         
 
