--- a/inlamning/index.html
+++ b/inlamning/index.html
@@ -31,8 +31,8 @@
         </select>
         
 
-        <input type="text" name="" id="" placeholder="Description">
-        <input type="number" name="" id="" placeholder="ex 100">
+        <input type="text" name="" id="desc" placeholder="Description">
+        <input type="number" name="" id="num" placeholder="ex 100">
         <button> Add </button>
     </form>
 
