--- a/LocalStorage/index.html
+++ b/LocalStorage/index.html
@@ -13,13 +13,14 @@
 <form >
 
      <input type="text"  id="text">
+     <input type="number"  id="number">
      <button class="addToList">Add</button>
 </form>
 
 
 <div class="container">
 
-    
+
 </div>
 
 </body>
