image från localstorage

--- a/Imagewithlocalstorage/produkt.html
+++ b/Imagewithlocalstorage/produkt.html
@@ -7,8 +7,15 @@
     <title>Document</title>
 
     <script src="./produkt.js" defer></script>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     
+
+
+    <div class="product-container">
+
+
+    </div>
 </body>
 </html>
